--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 <body>
 
     <header>
-        <h1>JAVASCRIPT LOGBOOK</h1>
+        <h1>JAVASCRIPT LOGBOOK FOR 2025</h1>
+        <h3>Web Development with JavaScript and React</h3>
         <p>Adarshan Rai</p>
 
         <nav>
