--- a/abt.html
+++ b/abt.html
@@ -37,7 +37,7 @@
 
         <!-- Card 4 -->
         <div class="card">
-            <img src="uipics/44838db58ad7557106a0c0948956c759.jpg" alt="Image 4" class="card-image">
+            <img src="uipics/anime.jpg" alt="Image 4" class="card-image">
             
             <p>My hobbies include watching anime reading mangas</p>
             <a href="Chat.html" class="card-button">Dreams</a>
