--- a/abt.html
+++ b/abt.html
@@ -29,7 +29,7 @@
 
         <!-- Card 3 -->
         <div class="card">
-            <img src="uipics/WhatsApp Image 2025-02-10 at 11.49.57_f6404da2.jpg" alt="Image 3" class="card-image">
+            <img src="ui/WhatsApp Image 2025-02-10 at 11.49.57_f6404da2.jpg" alt="Image 3" class="card-image">
         
             <p>I have finished my schooling from Sakyong Sr Sec School, West Sikkim.</p>
             <a href="https://www.facebook.com/profile.php?id=100064144770859" class="card-button">MY School</a>
@@ -37,7 +37,7 @@
 
         <!-- Card 4 -->
         <div class="card">
-            <img src="uipics/anime.jpg" alt="Image 4" class="card-image">
+            <img src="ui/anime.jpg" alt="Image 4" class="card-image">
             
             <p>My hobbies include watching anime reading mangas</p>
             <a href="Chat.html" class="card-button">Dreams</a>
