--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 <body>
 
     <header>
-        <h1>JAVASCRIPT LOGBOOK</h1>
+        <h1>JAVASCRIPT LOGBOOK FOR WEB DEVELOPMENT USING JAVASCRIPT AND REACT</h1>
+    <h3>SEM-2 2025</h3>
         <p>Adarshan Rai</p>
 
         <nav>
