--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <body>
 
     <header>
-        <h2>JAVASCRIPT LOGBOOK FOR WEB DEVELOPMENT USING JAVASCRIPT AND REACT</h2>
+        <h2>LOGBOOK FOR WEB DEVELOPMENT USING JAVASCRIPT AND REACT</h2>
     <h3>SEM-2 2025</h3>
         <p>Adarshan Rai</p>
 
