--- a/abt.html
+++ b/abt.html
@@ -21,7 +21,7 @@
 
         <!-- Card 2 -->
         <div class="card">
-            <img src="https://i.pinimg.com/736x/ac/b3/b8/acb3b8f6fbe933724791a098751b20c0.jpg" alt="Image 2" class="card-image">
+            <img src="home.jpg" alt="Image 2" class="card-image">
           
             <p>West Sikkim, Geyzing my scenic hometown where I grew up</p>
             
