--- a/abt.html
+++ b/abt.html
@@ -21,7 +21,7 @@
 
         <!-- Card 2 -->
         <div class="card">
-            <img src="home.jpg" alt="Image 2" class="card-image">
+            <img src="ui/home.jpg" alt="Image 2" class="card-image">
           
             <p>West Sikkim, Geyzing my scenic hometown where I grew up</p>
             
