--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
 
             <div class="box">
                 <p>Project 3</p>
-                <h5>Fetching posts from a JSON API with a specified limit.</h5>
+                <h5>Fetching posts from a JSON API with a specified limit</h5>
                 <a href="api.html"><button class="btn">Open</button></a>
             </div>
 
             <div class="box">
                 <p>Project 4</p>
-                <h5>Weather forecasting with open-meteo API.</h5>
+                <h5>Weather forecasting with open-meteo API</h5>
                 <a href="weatherforecast.html"><button class="btn">Open</button></a>
             </div>
         </div>
